--- a/notifications.html
+++ b/notifications.html
@@ -24,6 +24,18 @@
         display: flex;
         align-items: center;
         gap: 15px;
+        animation: slideIn 0.3s ease;
+      }
+
+      @keyframes slideIn {
+        from {
+          opacity: 0;
+          transform: translateY(10px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
 
       body.dark .notification-item {
@@ -197,6 +209,76 @@
         background-color: #9ca3af;
         cursor: not-allowed;
       }
+
+      /* Loading State Styles */
+      .loading-state {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 80px 20px;
+        gap: 20px;
+      }
+
+      .loading-state.active {
+        display: flex;
+      }
+
+      .spinner {
+        width: 60px;
+        height: 60px;
+        border: 5px solid #f3e8ff;
+        border-top-color: #d946ef;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      .loading-text {
+        color: #6b7280;
+        font-size: 16px;
+        font-weight: 600;
+      }
+
+      body.dark .loading-text {
+        color: #ddd;
+      }
+
+      body.dark .spinner {
+        border-color: #444;
+        border-top-color: #d946ef;
+      }
+
+      .loading-subtext {
+        color: #9ca3af;
+        font-size: 14px;
+        margin-top: -10px;
+      }
+
+      body.dark .loading-subtext {
+        color: #888;
+      }
+
+      /* Pulse animation for loading dots */
+      @keyframes pulse {
+        0%,
+        100% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0.5;
+        }
+      }
+
+      .loading-dots {
+        display: inline-block;
+        animation: pulse 1.5s ease-in-out infinite;
+      }
     </style>
   </head>
 
@@ -299,6 +381,17 @@
             />
           </div>
 
+          <!-- Loading State -->
+          <div id="loadingState" class="loading-state">
+            <div class="spinner"></div>
+            <span class="loading-text"
+              >جارٍ تحميل الإشعارات<span class="loading-dots">...</span></span
+            >
+            <span class="loading-subtext"
+              >يرجى الانتظار، قد يستغرق هذا بضع ثوانٍ</span
+            >
+          </div>
+
           <div id="notificationsList"></div>
         </div>
 
@@ -314,6 +407,7 @@
 
       let allBookings = [];
       let filteredBookings = [];
+      let isLoading = false;
 
       // Login
       async function login() {
@@ -354,9 +448,27 @@
         setInterval(loadNotifications, 30000);
       }
 
+      // Show loading state
+      function showLoading() {
+        isLoading = true;
+        document.getElementById("loadingState").classList.add("active");
+        document.getElementById("notificationsList").style.display = "none";
+      }
+
+      // Hide loading state
+      function hideLoading() {
+        isLoading = false;
+        document.getElementById("loadingState").classList.remove("active");
+        document.getElementById("notificationsList").style.display = "block";
+      }
+
       // Load notifications
       async function loadNotifications() {
+        if (isLoading) return; // Prevent multiple simultaneous loads
+
         try {
+          showLoading();
+
           const res = await fetch("/api/bookings");
           if (!res.ok) throw new Error("Failed to fetch bookings");
 
@@ -364,9 +476,16 @@
           allBookings = rawData.slice(1).reverse();
           filteredBookings = [...allBookings];
 
+          // Small delay to ensure smooth transition
+          await new Promise((resolve) => setTimeout(resolve, 300));
+
           renderNotifications();
         } catch (error) {
           console.error("❌ Error loading notifications:", error);
+          // Even on error, hide loading and show empty list
+          hideLoading();
+        } finally {
+          hideLoading();
         }
       }
 
