--- a/notifications.html
+++ b/notifications.html
@@ -13,44 +13,34 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <style>
-      /* ---------- Loading Overlay ---------- */
+      /* Spinner Overlay */
       #loadingOverlay {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(255, 255, 255, 0.9);
-        z-index: 9999;
         display: none;
         align-items: center;
         justify-content: center;
+        background: rgba(255, 255, 255, 0.9);
         flex-direction: column;
+        z-index: 9999;
         text-align: center;
-      }
-
-      .loader-spinner {
-        border: 6px solid #eee;
-        border-top: 6px solid #d946ef;
-        border-radius: 50%;
-        width: 70px;
-        height: 70px;
-        animation: spin 1s linear infinite;
-        margin-bottom: 15px;
-      }
-
-      #loadingText {
-        font-size: 18px;
-        font-weight: bold;
-        color: #6b21a8;
       }
 
       body.dark #loadingOverlay {
         background: rgba(0, 0, 0, 0.85);
       }
 
-      body.dark #loadingText {
-        color: #fff;
+      .loader {
+        border: 6px solid #e0e0e0;
+        border-top: 6px solid #d946ef;
+        border-radius: 50%;
+        width: 70px;
+        height: 70px;
+        animation: spin 1s linear infinite;
+        margin-bottom: 15px;
       }
 
       @keyframes spin {
@@ -62,14 +52,23 @@
         }
       }
 
-      /* ---------- Notifications & UI ---------- */
+      #loadingText {
+        font-size: 18px;
+        font-weight: bold;
+        color: #6b21a8;
+      }
+
+      body.dark #loadingText {
+        color: #fff;
+      }
+
+      /* Notification styles */
       .notification-item {
         background: white;
         border-radius: 12px;
         padding: 20px;
         margin-bottom: 15px;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-        transition: all 0.3s ease;
         border-inline-start: 4px solid #d946ef;
         display: flex;
         align-items: center;
@@ -96,11 +95,6 @@
         justify-content: center;
         color: white;
         font-size: 20px;
-        flex-shrink: 0;
-      }
-
-      .notification-content {
-        flex: 1;
       }
 
       .notification-name {
@@ -143,48 +137,6 @@
         box-shadow: 0 4px 12px rgba(217, 70, 239, 0.3);
       }
 
-      .notifications-header h2 {
-        margin: 0;
-        font-size: 28px;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      .notifications-header p {
-        margin: 10px 0 0 0;
-        opacity: 0.9;
-      }
-
-      .notifications-container {
-        max-width: 900px;
-        margin: 0 auto;
-      }
-
-      .search-filter {
-        margin-bottom: 20px;
-      }
-
-      .search-filter input {
-        width: 100%;
-        padding: 12px 20px;
-        border: 2px solid #e0e0e0;
-        border-radius: 8px;
-        font-size: 14px;
-        transition: border-color 0.3s ease;
-      }
-
-      body.dark .search-filter input {
-        background: #2d2d2d;
-        border-color: #444;
-        color: #fff;
-      }
-
-      .search-filter input:focus {
-        outline: none;
-        border-color: #d946ef;
-      }
-
       .time-filters {
         display: flex;
         gap: 10px;
@@ -208,20 +160,15 @@
         color: white;
       }
 
-      .filter-btn.reset {
-        background: #e5e7eb;
-        color: #374151;
-      }
-
-      .filter-btn.reset:hover {
-        background: #9ca3af;
-        color: white;
-      }
-
       .filter-btn.active {
         background: linear-gradient(135deg, #d946ef, #a855f7);
         color: white;
         box-shadow: 0 3px 10px rgba(217, 70, 239, 0.3);
+      }
+
+      .filter-btn.reset {
+        background: #e5e7eb;
+        color: #374151;
       }
 
       .download-btn {
@@ -232,39 +179,32 @@
         border-radius: 8px;
         font-weight: bold;
         cursor: pointer;
-        display: inline-flex;
-        align-items: center;
-        gap: 8px;
-        transition: background-color 0.3s;
         margin-bottom: 20px;
       }
 
       .download-btn:hover {
         background-color: #a855f7;
       }
-
-      .download-btn:disabled {
-        background-color: #9ca3af;
-        cursor: not-allowed;
-      }
     </style>
   </head>
 
   <body>
-    <!-- Loading Overlay -->
+    <!-- Loading Spinner -->
     <div id="loadingOverlay">
-      <div class="loader-spinner"></div>
-      <div id="loadingText">⏳ يرجى الانتظار... يتم تحميل البيانات</div>
+      <div class="loader"></div>
+      <div id="loadingText">⏳ جاري تحميل البيانات...</div>
     </div>
 
     <!-- LOGIN SCREEN -->
     <div id="loginScreen">
       <div id="loginBox">
-        <h2><i class="fas fa-lock"></i>تسجيل دخول المسؤول</h2>
+        <h2><i class="fas fa-lock"></i> تسجيل دخول المسؤول</h2>
         <input type="email" id="email" placeholder="البريد الإلكتروني" />
         <input type="password" id="password" placeholder="كلمة المرور" />
         <button onclick="login()">تسجيل الدخول</button>
-        <p id="errorMsg">بريد إلكتروني أو كلمة مرور غير صالحة</p>
+        <p id="errorMsg" style="display: none">
+          بريد إلكتروني أو كلمة مرور غير صالحة
+        </p>
       </div>
     </div>
 
@@ -293,7 +233,6 @@
         </nav>
       </aside>
 
-      <!-- MAIN CONTENT -->
       <main class="main-content" id="dashboardContent" style="display: none">
         <header class="header">
           <div class="header-left">
@@ -361,17 +300,20 @@
 
       let allBookings = [];
       let filteredBookings = [];
+      let isLoading = false;
 
       const overlay = document.getElementById("loadingOverlay");
       const loadingText = document.getElementById("loadingText");
 
-      function showLoading(message = "⏳ يرجى الانتظار... يتم تحميل البيانات") {
+      function showLoading(message = "⏳ جاري تحميل البيانات...") {
         loadingText.textContent = message;
         overlay.style.display = "flex";
+        isLoading = true;
       }
 
       function hideLoading() {
         overlay.style.display = "none";
+        isLoading = false;
       }
 
       // Login
@@ -405,25 +347,34 @@
 
       // Load notifications
       async function loadNotifications() {
-        showLoading("📋 جاري تحميل بيانات الحجوزات...");
+        showLoading("📋 يتم تحميل بيانات الحجوزات...");
         try {
           const res = await fetch("/api/bookings");
           if (!res.ok) throw new Error("Failed to fetch bookings");
-
           const rawData = await res.json();
+
           allBookings = rawData.slice(1).reverse();
           filteredBookings = [...allBookings];
+
           renderNotifications();
         } catch (e) {
-          console.error("Error:", e);
+          console.error("❌ Error loading notifications:", e);
         } finally {
           hideLoading();
         }
       }
 
-      // Render
+      // Render notifications
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
+        container.innerHTML = "";
+
+        if (!filteredBookings.length) {
+          container.innerHTML =
+            "<p style='text-align:center;color:#666;'>لا توجد بيانات متاحة</p>";
+          return;
+        }
+
         container.innerHTML = filteredBookings
           .map(
             (b) => `
@@ -449,39 +400,37 @@
           .join("");
       }
 
-      // Time filter
+      // Time filtering
       async function filterByTime(period, btn) {
-        let msg =
-          period === "day"
-            ? "🔄 جاري تحميل حجوزات اليوم..."
-            : period === "week"
-            ? "🔄 جاري تحميل حجوزات هذا الأسبوع..."
-            : "🔄 جاري تحميل حجوزات هذا الشهر...";
-        showLoading(msg);
-
+        showLoading("🔄 جاري تصفية البيانات...");
         setActiveButton(btn);
-        await new Promise((r) => setTimeout(r, 300)); // small buffer for UX
-
         const now = new Date();
+
         filteredBookings = allBookings.filter((b) => {
           if (!b.time) return false;
           const date = new Date(b.time);
           if (isNaN(date.getTime())) return false;
-          if (period === "day")
+
+          if (period === "day") {
             return (
               date.getFullYear() === now.getFullYear() &&
               date.getMonth() === now.getMonth() &&
               date.getDate() === now.getDate()
             );
+          }
+
           if (period === "week") {
-            const weekAgo = new Date(now - 7 * 86400000);
+            const weekAgo = new Date(now.getTime() - 7 * 86400000);
             return date >= weekAgo && date <= now;
           }
-          if (period === "month")
+
+          if (period === "month") {
             return (
               date.getFullYear() === now.getFullYear() &&
               date.getMonth() === now.getMonth()
             );
+          }
+
           return true;
         });
 
@@ -490,28 +439,29 @@
       }
 
       function resetTimeFilter(btn) {
-        showLoading("🔄 جاري تحميل جميع الحجوزات...");
-        setTimeout(() => {
-          filteredBookings = [...allBookings];
-          renderNotifications();
-          setActiveButton(btn);
-          hideLoading();
-        }, 400);
+        showLoading("🔁 جاري عرض جميع الحجوزات...");
+        filteredBookings = [...allBookings];
+        setActiveButton(btn);
+        renderNotifications();
+        hideLoading();
       }
 
-      function setActiveButton(b) {
+      function setActiveButton(selectedBtn) {
         document
           .querySelectorAll(".filter-btn")
-          .forEach((x) => x.classList.remove("active"));
-        if (!b.classList.contains("reset")) b.classList.add("active");
+          .forEach((b) => b.classList.remove("active"));
+        if (!selectedBtn.classList.contains("reset")) {
+          selectedBtn.classList.add("active");
+        }
       }
 
-      function getTimeAgo(t) {
-        if (!t) return "غير محدد";
-        const n = new Date(),
-          d = new Date(t);
+      // Time ago
+      function getTimeAgo(time) {
+        if (!time) return "غير محدد";
+        const now = new Date();
+        const d = new Date(time);
         if (isNaN(d)) return "غير محدد";
-        const diff = n - d;
+        const diff = now - d;
         const mins = Math.floor(diff / 60000),
           hrs = Math.floor(diff / 3600000),
           days = Math.floor(diff / 86400000);
@@ -522,19 +472,11 @@
         return d.toLocaleDateString("ar-EG");
       }
 
-      if (localStorage.getItem("clinic_logged_in") === "true") {
-        document.getElementById("loginScreen").style.display = "none";
-        document.getElementById("dashboardContent").style.display = "block";
-        loadNotifications();
-      }
-
-      document.getElementById("menuToggle").onclick = () =>
-        document.getElementById("sidebar").classList.toggle("active");
-
-      const t = document.getElementById("themeToggle");
-      t.onclick = () => {
+      // Theme + startup
+      const themeToggle = document.getElementById("themeToggle");
+      themeToggle.onclick = () => {
         document.body.classList.toggle("dark");
-        const i = t.querySelector("i");
+        const i = themeToggle.querySelector("i");
         if (document.body.classList.contains("dark")) {
           i.classList.replace("fa-moon", "fa-sun");
           localStorage.setItem("clinic_theme", "dark");
@@ -543,10 +485,20 @@
           localStorage.setItem("clinic_theme", "light");
         }
       };
+
       if (localStorage.getItem("clinic_theme") === "dark") {
         document.body.classList.add("dark");
-        t.querySelector("i").classList.replace("fa-moon", "fa-sun");
+        themeToggle.querySelector("i").classList.replace("fa-moon", "fa-sun");
       }
+
+      if (localStorage.getItem("clinic_logged_in") === "true") {
+        document.getElementById("loginScreen").style.display = "none";
+        document.getElementById("dashboardContent").style.display = "block";
+        loadNotifications();
+      }
+
+      document.getElementById("menuToggle").onclick = () =>
+        document.getElementById("sidebar").classList.toggle("active");
     </script>
   </body>
 </html>
